issue with gap was wide letters falling outside of given column

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -93,13 +93,14 @@ $blue: #6692B4
     position: relative
     z-index: 3
     .title
+      box-sizing: border-box
       position: absolute
       top: 45%
-      transform: translateY(-50%)
-      font-size: 7em
+      left: 50%
+      transform: translate(-50%, -50%)
+      font-size: 5.2em
       color: transparentize(gray, .75)
       text-transform: uppercase
-      padding: .2em
       margin: 0
       z-index: -1
     p
